Add basic calculator layout

--- a/index.html
+++ b/index.html
@@ -8,6 +8,40 @@
     </head>
 
     <body>
+        <div id="container">
+            <input class="display"></input>
+
+            <button class="AC">AC</button>
+            <button class="row-one-percentage">%</button>
+            <button class="operator-divide">/</button>
+
+            <button class="row-two-7">7</button>
+            <button class="row-two-8">8</button>
+            <button class="row-two-9">9</button>
+            <button class="operator-multiply">X</button>
+
+            <button class="row-three-4">4</button>
+            <button class="row-three-5">5</button>
+            <button class="row-three-6">6</button>
+            <button class="operator-subtract">-</button>
+
+            <button class="row-four-1">1</button>
+            <button class="row-four-2">2</button>
+            <button class="row-four-3">3</button>
+            <button class="operator-add">+</button>
+
+            <button class="zero">0</button>
+            <button class="row-five-decimal">.</button>
+            <button class="operator-equals">=</button>
+
+
+
+
+
+
+
+
+        </div>
 
 
 
