--- a/index.html
+++ b/index.html
@@ -9,57 +9,37 @@
 
     <body>
         <div id="container">
-            <input class="display"></input>
+            <div class="display">100+100</div>
 
-            <button class="AC">AC</button>
-            <button class="row-one-percentage">%</button>
+            <button class="all-clear">AC</button>
+            <button class="delete">DEL</button>
             <button class="operator-divide">/</button>
 
-            <button class="row-two-7">7</button>
-            <button class="row-two-8">8</button>
-            <button class="row-two-9">9</button>
+            <button class="number-7" value="7">7</button>
+            <button class="number-8" value="8">8</button>
+            <button class="number-9" value="9">9</button>
             <button class="operator-multiply">X</button>
 
-            <button class="row-three-4">4</button>
-            <button class="row-three-5">5</button>
-            <button class="row-three-6">6</button>
+            <button class="number-4" value="4">4</button>
+            <button class="number-5" value="5">5</button>
+            <button class="number-6" value="6">6</button>
             <button class="operator-subtract">-</button>
 
-            <button class="row-four-1">1</button>
-            <button class="row-four-2">2</button>
-            <button class="row-four-3">3</button>
+            <button class="number-1" value="1">1</button>
+            <button class="number-2" value="2">2</button>
+            <button class="number-3" value="3">3</button>
             <button class="operator-add">+</button>
 
-            <button class="zero">0</button>
-            <button class="row-five-decimal">.</button>
-            <button class="operator-equals">=</button>
-
-
-
-
-
-
-
+            <button class="number-zero" value="0">0</button>
+            <button class="number-decimal">.</button>
+            <button class="equals">=</button>
 
         </div>
 
 
-
-
-
-
-
-
-
-
+        <script src="script.js"></script>
     </body>
 
-
-
-
-
-
-<script src="script.js"></script>
 
 </html>
  
