--- a/index.html
+++ b/index.html
@@ -9,29 +9,29 @@
 
     <body>
         <div id="container">
-            <div class="display">100+100</div>
+            <output class="display">100+100</output>
 
             <button class="all-clear">AC</button>
             <button class="delete">DEL</button>
-            <button class="operator-divide">/</button>
+            <button id="divide" class="operator" value="/">/</button>
 
-            <button class="number-7" value="7">7</button>
-            <button class="number-8" value="8">8</button>
-            <button class="number-9" value="9">9</button>
-            <button class="operator-multiply">X</button>
+            <button class="number" value="7">7</button>
+            <button class="number" value="8">8</button>
+            <button class="number" value="9">9</button>
+            <button id="multiply" class="operator" value="x">x</button>
 
-            <button class="number-4" value="4">4</button>
-            <button class="number-5" value="5">5</button>
-            <button class="number-6" value="6">6</button>
-            <button class="operator-subtract">-</button>
+            <button class="number" value="4">4</button>
+            <button class="number" value="5">5</button>
+            <button class="number" value="6">6</button>
+            <button id="subtract" class="operator" value="-">-</button>
 
-            <button class="number-1" value="1">1</button>
-            <button class="number-2" value="2">2</button>
-            <button class="number-3" value="3">3</button>
-            <button class="operator-add">+</button>
+            <button class="number" value="1">1</button>
+            <button class="number" value="2">2</button>
+            <button class="number" value="3">3</button>
+            <button id="add" class="operator" value="+">+</button>
 
-            <button class="number-zero" value="0">0</button>
-            <button class="number-decimal">.</button>
+            <button id="zero" class="number" value="0">0</button>
+            <button class="number" value=".">.</button>
             <button class="equals">=</button>
 
         </div>
