Remove dummy content from display

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <div id="container">
-            <output class="display">100+100</output>
+            <output class="display"></output>
 
             <button class="all-clear">AC</button>
             <button class="delete">DEL</button>
