Replace delete button with percentage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <output class="display"></output>
 
             <button class="all-clear">AC</button>
-            <button class="delete">DEL</button>
+            <button class="percent">%</button>
             <button id="divide" class="operator" value="/">/</button>
 
             <button class="number" value="7">7</button>
